--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,78 @@
   <groupId>1.1</groupId>
   <artifactId>mavenprjtvarun</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
+				<version>3.0.0-M5</version> </plugin> -->
+		</plugins>
+
+
+	</build>
+	<dependencies>
+
+		<!-- Reporting using extent report -->
+		<dependency>
+			<groupId>com.relevantcodes</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>2.41.2</version>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api <dependency> 
+			<groupId>javax.mail</groupId> <artifactId>javax.mail-api</artifactId> <version>1.6.2</version> 
+			</dependency> -->
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>smtp</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<!-- HSSFWorkbook workbook; -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<!-- FileUtils.copyFile -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
+
+<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.skyscreamer</groupId>
+			<artifactId>jsonassert</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		
+		
+		</dependencies>
 </project>
