--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
 				<configuration>
+				 <suiteXmlFiles>
+                    <suiteXmlFile>testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+                
 					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 			</plugin>
